variable product visibility issue fixed

--- a/src/css/view/woo-product-gallery.scss
+++ b/src/css/view/woo-product-gallery.scss
@@ -1876,4 +1876,8 @@
             display: flex;
         }
     }
+    .variations_form.nm-custom-select tr .value select{
+        opacity: 1;
+        border: 1px solid #ccc;
+    }
 } 
